ensure links on flowchart answer have contrasting color

--- a/src/scss/components/_flowchart.scss
+++ b/src/scss/components/_flowchart.scss
@@ -19,6 +19,8 @@
 .flowchart__item--answer {
   background: $navy;
   color: $white;
+
+  @include links-current;
 }
 
 .flowchart__title {
